# package-badges

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  railway.json
.github/workflows/: lint.yml  test.yml
app/: env.py  error.py  main.py  telemetry.py
app/plugins/: error.py  security.py  telemetry.py
app/routes/health/: live.py
app/routes/hooks/: automa.py
app/update/: __init__.py  update.py
app/update/ecosystems/: cargo.py  ecosystem.py  npm.py  pypi.py
app/update/formats/: format.py  md.py  rst.py
tests/: conftest.py  test_automa.py  test_error.py  test_health.py  test_update.py
tests/__snapshots__/: test_update.ambr
tests/automa/: test_hooks_automa.py
tests/automa/fixtures/: task.json
tests/fixtures/cargo/: Cargo.toml
tests/fixtures/cargo_private/: Cargo.toml
tests/fixtures/cargo_publish_both_registries/: Cargo.toml
tests/fixtures/cargo_publish_crates_io/: Cargo.toml
tests/fixtures/cargo_publish_empty/: Cargo.toml  README.md
tests/fixtures/cargo_publish_registry/: Cargo.toml
tests/fixtures/existing_badge/: README.md
tests/fixtures/md_h3_heading/: README.md
tests/fixtures/md_no_heading/: README.md  package.json
tests/fixtures/monorepo/: pyproject.toml
tests/fixtures/npm_private/: README.md  package.json
tests/fixtures/pypi/: README.md
tests/fixtures/pypi_private/: pyproject.toml
tests/fixtures/rst/: README.rst
tests/fixtures/rst_h1_heading/: README.rst
tests/fixtures/rst_h3_heading/: README.rst
tests/fixtures/rst_no_heading/: README.rst  pyproject.toml
