[project]
name    = "package-badges"
version = "0.1.0"

requires-python = ">=3.11"

classifiers = ["Private :: Do Not Upload"]

dependencies = [
    "automa-bot~=0.1.1",
    "fastapi-cli~=0.0.7",
    "fastapi-file-router>=0.1.17",
    "fastapi~=0.115.11",
    "opentelemetry-api~=1.31.1",
    "opentelemetry-exporter-otlp-proto-grpc~=1.31.1",
    "opentelemetry-instrumentation-fastapi~=0.52b1",
    "opentelemetry-sdk~=1.31.1",
    "opentelemetry-semantic-conventions~=0.52b1",
    "pydantic-settings~=2.8.1",
    "sentry-sdk[fastapi]~=2.24.0",
    "uvicorn~=0.34.0",
]

[dependency-groups]
dev = ["httpx~=0.28.1", "pytest-cov~=6.0.0", "pytest~=8.3.5", "ruff~=0.11.2", "syrupy~=4.9.1"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths  = ["tests"]
